...
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/card_list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
    />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@drawable/ic_plus"
    />
...
