<?xml version="1.0" encoding="utf-8"?>
<!--
 This file is part of BBCT for Android.

 Copyright 2014 codeguru <codeguru@users.sourceforge.net>

 BBCT for Android is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 BBCT for Android is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/delete_menu"
        android:icon="@drawable/delete"
        android:title="@string/delete_menu"/>
    <item
        android:id="@+id/select_all_menu"
        android:icon="@drawable/select_all"
        android:title="@string/select_all_menu"/>
</menu>
